--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
   db:
     image: "postgres:11.2"
     restart: always
+    ports:
+      - "15432:5432"
     environment:
       POSTGRES_DB: podcast
       POSTGRES_USER: admin
