--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
       APP_SETTINGS: "config.DevelopmentConfig"
       FLASK_APP: "app"
       FLASK_ENV: "development"
-    command: ["flask", "run", "--host", "0.0.0.0", "--port", "8000"]
+    command: ["wait-for-it", "db:5432", "--timeout=30", "--strict", "--",
+              "flask", "run", "--host", "0.0.0.0", "--port", "8000"]
   
   db:
     image: "postgres:11.2"
