not-working version of redis-queue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,12 +15,32 @@ services:
     env_file: .env
     environment:
       DATABASE_URL: "postgresql://admin:${POSTGRES_PASSWORD}@db/podcast"
+      REDIS_URL: "redis://redis:6379/0"
       APP_SETTINGS: "config.DevelopmentConfig"
       FLASK_APP: "app"
       FLASK_ENV: "development"
     command: ["wait-for-it", "db:5432", "--timeout=30", "--strict", "--",
               "flask", "run", "--host", "0.0.0.0", "--port", "8000"]
   
+  worker:
+    build: .
+    image: "sdemurin/audeeo:0.0.1"
+    depends_on:
+      - db
+    volumes:
+      - ./config.py:/srv/audeeo/config.py
+      - ./app:/srv/audeeo/app
+    env_file: .env
+    environment:
+      DATABASE_URL: "postgresql://admin:${POSTGRES_PASSWORD}@db/podcast"
+      REDIS_URL: "redis://redis:6379/0"
+      APP_SETTINGS: "config.DevelopmentConfig"
+      FLASK_APP: "app"
+      FLASK_ENV: "development"
+    command: ["wait-for-it", "db:5432", "--timeout=30", "--strict", "--",
+              "flask", "run-worker"]
+
+
   db:
     image: "postgres:11.2"
     restart: always
@@ -34,3 +54,14 @@ services:
       - type: bind
         source: ./db_data
         target: /var/lib/postgresql/data
+
+  redis:
+    image: redis:5.0.4-alpine
+
+  rq-dashboard:
+    build:
+      context: .
+      dockerfile: ./rq-dashboard.Dockerfile
+    ports:
+      - '9181:9181'
+    command: ["rq-dashboard", "-H", "redis"]
