--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,13 @@ services:
       - "8000:8000"
     volumes:
       - ./config.py:/srv/audeeo/config.py
-      - ./app:/srv/audeeo/app
+      - ./audeeo:/srv/audeeo/audeeo
       - ./migrations:/srv/audeeo/migrations
     env_file: .env
     environment:
       DATABASE_URL: "postgresql://admin:${POSTGRES_PASSWORD}@db/podcast"
       APP_SETTINGS: "config.DevelopmentConfig"
-      FLASK_APP: "app"
+      FLASK_APP: "audeeo"
       FLASK_ENV: "development"
     command: ["wait-for-it", "db:5432", "--timeout=30", "--strict", "--",
               "flask", "run", "--host", "0.0.0.0", "--port", "8000"]
