--- a/traefik.toml
+++ b/traefik.toml
@@ -8,6 +8,8 @@ defaultEntryPoints=["http", "https"]
       entryPoint="https"
   [entryPoints.https]
   address=":443"
+    [entryPoints.https.tls]
+      [[entryPoints.https.tls.certificates]]
 
 [docker]
 endpoint = "unix:///var/run/docker.sock"
