--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       APP_SETTINGS: "config.ProductionConfig"
       FLASK_ENV: "production"
     command: ["wait-for-it", "db:5432", "--timeout=30", "--strict", "--",
-              "flask", "run", "--host", "0.0.0.0", "--port", "8000"]
+     "gunicorn", "-c", "gunicorn-conf.py", "wsgi:app"]
   
   db:
     image: "postgres:11.2"
