--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ flask-security>=3.0.0,<4.0.0
 flask-sqlalchemy
 flask-sqlalchemy-session
 flask-wtf
+gunicorn[gevent]
 internetarchive
 psycopg2-binary
