comment https-related stuff, until domain is ready
https://github.com/kakty3/audeeo/pull/6#discussion_r318751773

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,10 +21,11 @@ services:
         published: 80
         protocol: tcp
         mode: host
-      - target: 443
-        published: 443
-        protocol: tcp
-        mode: host
+      # TODO uncomment this, when domain is ready
+      # - target: 443
+      #   published: 443
+      #   protocol: tcp
+      #   mode: host
 
   app:
     build: .
