--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ filetype
 flask
 flask-konch
 flask-migrate
-flask-security>=3.0.0,<4.0.0
+flask-security~=3.0.0
 flask-sqlalchemy
 flask-sqlalchemy-session
 flask-wtf
 internetarchive
 psycopg2-binary
+pytest~=5.1.1
