--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -46,8 +46,8 @@ services:
       APP_SETTINGS: "config.ProductionConfig"
       FLASK_ENV: "production"
     command: ["wait-for-it", "db:5432", "--timeout=30", "--strict", "--",
-              "gunicorn", "-c", "gunicorn-conf.py", "wsgi:app"]
-  
+              "gunicorn", "-c", "gunicorn-conf.py", "wsgi:create_app()"]
+
   db:
     image: "postgres:11.2"
     networks:
