require config env vars to be set

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -11,6 +11,8 @@ services:
       DATABASE_URL: "postgresql://postgres:postgres@db-test/postgres"
       FLASK_SECRET_KEY: "ohphisai5lohTha"
       FLASK_TESTING: 1
+      IA_S3_ACCESS_KEY_ID: test_key
+      IA_S3_SECRET_ACCESS_KEY_ID: test_secret_key
     networks:
       - test
     command: ["wait-for-it", "db-test:5432", "--timeout=30", "--strict", "--",
