add entrypoint for container

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./audeeo:/srv/audeeo/audeeo
       - ./tests:/srv/audeeo/tests
+      - ./docker-entrypoint.test.sh:/srv/audeeo/docker-entrypoint.test.sh
     environment:
       DATABASE_URL: "postgresql://postgres:postgres@db-test/postgres"
       FLASK_SECRET_KEY: "ohphisai5lohTha"
@@ -15,8 +16,7 @@ services:
       IA_S3_SECRET_ACCESS_KEY_ID: test_secret_key
     networks:
       - test
-    command: ["wait-for-it", "db-test:5432", "--timeout=30", "--strict", "--",
-              "flask", "test"]
+    entrypoint: ["wait-for-it", "db-test:5432", "--timeout=30", "--strict", "--", "./docker-entrypoint.test.sh"]
 
   db-test:
     image: "postgres:11.2"
