--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,7 @@ services:
     environment:
       FLASK_ENV: "development"
       DATABASE_URL: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db/${POSTGRES_DB}"
-    command: ["wait-for-it", "db:5432", "--timeout=30", "--strict", "--",
-              "flask", "run", "--host", "0.0.0.0", "--port", "8000"]
+    entrypoint: ["wait-for-it", "db:5432", "--timeout=30", "--strict", "--", "./docker-entrypoint.sh"]
 
   db:
     image: "postgres:11.2"
