Get rid of gevent

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ flask-security~=3.0.0
 flask-sqlalchemy
 flask-sqlalchemy-session
 flask-wtf
-gunicorn[gevent]
+gunicorn
 internetarchive
 psycopg2-binary
 pytest~=5.1.1
