--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,69 @@
-bcrypt
-environs~=5.2.1
-feedgen
-filetype
-flask
-flask-konch
-flask-marshmallow
-flask-migrate
-flask-restful
-flask-security~=3.0.0
-flask-sqlalchemy
-flask-sqlalchemy-session
-flask-wtf
-gunicorn
-internetarchive
-marshmallow-sqlalchemy
-psycopg2-binary
-pytest~=5.1.1
+alembic==1.3.2
+aniso8601==8.0.0
+args==0.1.0
+atomicwrites==1.3.0
+attrs==19.3.0
+Babel==2.7.0
+backports.csv==1.0.7
+bcrypt==3.1.7
+blinker==1.4
+certifi==2019.11.28
+cffi==1.13.2
+chardet==3.0.4
+Click==7.0
+clint==0.5.1
+contextlib2==0.5.5
+docopt==0.6.2
+environs==5.2.1
+feedgen==0.8.0
+filetype==1.0.5
+Flask==1.1.1
+Flask-BabelEx==0.9.3
+flask-konch==2.0.0
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+flask-marshmallow==0.10.1
+Flask-Migrate==2.5.2
+Flask-Principal==0.4.0
+Flask-RESTful==0.3.7
+Flask-Security==3.0.0
+Flask-SQLAlchemy==2.4.1
+Flask-SQLAlchemy-Session==1.1
+Flask-WTF==0.14.2
+gunicorn==20.0.4
+idna==2.8
+importlib-metadata==1.3.0
+internetarchive==1.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.3
+jsonpatch==1.24
+jsonpointer==2.0
+konch==4.2.2
+lxml==4.4.2
+Mako==1.1.0
+MarkupSafe==1.1.1
+marshmallow==3.3.0
+marshmallow-sqlalchemy==0.21.0
+more-itertools==8.0.2
+packaging==19.2
+passlib==1.7.2
+pluggy==0.13.1
+psycopg2-binary==2.8.4
+py==1.8.0
+pycparser==2.19
+pyparsing==2.4.6
+pytest==5.1.3
+python-dateutil==2.8.1
+python-dotenv==0.10.3
+python-editor==1.0.4
+pytz==2019.3
+requests==2.22.0
+schema==0.7.1
+six==1.13.0
+speaklater==1.3
+SQLAlchemy==1.3.12
+urllib3==1.25.7
+wcwidth==0.1.7
+Werkzeug==0.16.0
+WTForms==2.2.1
+zipp==0.6.0
